@@ -1,5 +1,11 @@
 2014-12-04  Ola Jeppsson  <ola@adapteva.com>
 
+	* src/e-hal/src/epiphany-hal.c (ssize_t ee_write_buf): Temporarily
+	limit writes to 4 byte chunks to work around temporary limitations
+	new eLink programmable logic.
+
+2014-12-04  Ola Jeppsson  <ola@adapteva.com>
+
 	* src/e-hal/src/epiphany-hal-data.h: Update to match new PL eLink
 	interface.
 	* src/e-hal/src/epiphany-hal.c (int e_reset_system):
